--- a/src/plugins/NavsatMap/CMakeLists.txt
+++ b/src/plugins/NavsatMap/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(NavSatMap
     NavSatMap.cc
   QT_HEADERS
     NavSatMap.hh
+  QML_SOURCES
+    NavSatMap.qml
   QML_URI
     NavSatMap
 )
