--- a/src/plugins/Plotting/CMakeLists.txt
+++ b/src/plugins/Plotting/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(TransportPlotting
     TransportPlotting.cc
   QT_HEADERS
     TransportPlotting.hh
+  QML_SOURCES
+    TransportPlotting.qml
   QML_URI
     TransportPlotting
 )
