--- a/src/plugins/Teleop/CMakeLists.txt
+++ b/src/plugins/Teleop/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(Teleop
     Teleop.cc
   QT_HEADERS
     Teleop.hh
+  QML_SOURCES
+    Teleop.qml
   TEST_SOURCES
     Teleop_TEST.cc
   QML_URI
