--- a/src/plugins/TopicEcho/CMakeLists.txt
+++ b/src/plugins/TopicEcho/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(TopicEcho
     TopicEcho.cc
   QT_HEADERS
     TopicEcho.hh
+  QML_SOURCES
+    TopicEcho.qml
   TEST_SOURCES
     TopicEcho_TEST.cc
   QML_URI
