--- a/src/plugins/ShutdownButton/CMakeLists.txt
+++ b/src/plugins/ShutdownButton/CMakeLists.txt
@@ -3,6 +3,8 @@ gz_gui_add_plugin(ShutdownButton
     ShutdownButton.cc
   QT_HEADERS
     ShutdownButton.hh
+  QML_SOURCES
+    ShutdownButton.qml
   TEST_SOURCES
     ShutdownButton_TEST.cc
   QML_URI
