--- a/src/plugins/TapeMeasure/CMakeLists.txt
+++ b/src/plugins/TapeMeasure/CMakeLists.txt
@@ -1,6 +1,10 @@
 gz_gui_add_plugin(TapeMeasure
-  SOURCES TapeMeasure.cc
-  QT_HEADERS TapeMeasure.hh
+  SOURCES
+    TapeMeasure.cc
+  QT_HEADERS
+    TapeMeasure.hh
+  QML_SOURCES
+    TapeMeasure.qml
   PRIVATE_LINK_LIBS
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
   QML_URI
