docs: fix typos across files
Signed-off-by: anshium <anshchablani@gmail.com>

--- a/examples/config/empty_side_drawer.config
+++ b/examples/config/empty_side_drawer.config
@@ -2,7 +2,7 @@
 
 <!--
   Main window has a side drawer, but the drawer is empty and can be
-  programatically populated with custom options.
+  programmatically populated with custom options.
 -->
 
 <window>
