fix transport plotting, all examples
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/examples/standalone/start_dialog/CMakeLists.txt
+++ b/examples/standalone/start_dialog/CMakeLists.txt
@@ -13,7 +13,7 @@ set(GZ_GUI_VER ${gz-gui10_VERSION_MAJOR})
 
 set(EXEC_NAME "start_dialog")
 
-QT5_ADD_RESOURCES(resources_RCC ${EXEC_NAME}.qrc)
+QT_ADD_RESOURCES(resources_RCC ${EXEC_NAME}.qrc)
 
 add_executable(${EXEC_NAME}
   ${EXEC_NAME}.cc
