Remove major version from package name
This removes the major version from the package
name in the following places:

* cmake project name and corresponding find_package
  calls in examples and tutorials
* package.xml name

Signed-off-by: Steve Peters <scpeters@openrobotics.org>

--- a/examples/standalone/custom_drawer/CMakeLists.txt
+++ b/examples/standalone/custom_drawer/CMakeLists.txt
@@ -18,8 +18,7 @@ find_package (Qt5
 )
 
 # Find the Gazebo GUI library
-find_package(gz-gui10 REQUIRED)
-set(GZ_GUI_VER ${gz-gui10_VERSION_MAJOR})
+find_package(gz-gui REQUIRED)
 
 qt_add_resources(resources_RCC custom_drawer.qrc)
 
@@ -29,5 +28,5 @@ add_executable(custom_drawer
   ${resources_RCC}
 )
 target_link_libraries(custom_drawer
-  gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
+  gz-gui::gz-gui
 )
