--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
 #============================================================================
 # Initialize the project
 #============================================================================
-project(gz-gui10 VERSION 10.0.0)
+project(gz-gui VERSION 10.0.0)
 
 #============================================================================
 # Find gz-cmake
