--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
-  <name>gz-gui10</name>
+  <name>gz-gui</name>
   <version>10.0.0</version>
   <description>Gazebo GUI : Graphical interfaces for robotics applications</description>
   <maintainer email="jennuine@google.com">Jenn Nguyen</maintainer>
