Added visibility variable for Flip Depth checkbox, editable via config, relevant tests and examples. Refactored the term 'visual' to 'visualization'.
Signed-off-by: Kostubh Khandelwal <khandelwalkostubh@gmail.com>

--- a/examples/config/image.config
+++ b/examples/config/image.config
@@ -12,5 +12,10 @@
 </plugin>
 
 <!--plugin filename="ImageDisplay">
+  <title>Without Flip Depth Visualization</title>
+  <show_depth_flip>false</show_depth_flip>
+</plugin-->
+
+<!--plugin filename="ImageDisplay">
   <title>With picker</title>
 </plugin-->
