comment out doxygen
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
           codecov-enabled: true
           cppcheck-enabled: true
           cpplint-enabled: true
-          doxygen-enabled: true
+          # doxygen-enabled: true
