--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
   <depend>gz-plugin3</depend>
   <depend>gz-rendering9</depend>
   <depend>gz-tools2</depend>
-  <depend>gz-transport14</depend>
+  <depend>gz-transport</depend>
   <depend>gz-utils3</depend>
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
