--- a/examples/standalone/point_cloud/CMakeLists.txt
+++ b/examples/standalone/point_cloud/CMakeLists.txt
@@ -3,8 +3,7 @@ cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
 project(gz-gui-point-cloud-example)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-  find_package(gz-transport14 QUIET REQUIRED OPTIONAL_COMPONENTS log)
-  set(GZ_TRANSPORT_VER ${gz-transport14_VERSION_MAJOR})
+  find_package(gz-transport QUIET REQUIRED OPTIONAL_COMPONENTS log)
 
   find_package(gz-common6 REQUIRED)
   set(GZ_COMMON_VER ${gz-common6_VERSION_MAJOR})
@@ -14,7 +13,7 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
   add_executable(point_cloud point_cloud.cc)
   target_link_libraries(point_cloud
-    gz-transport${GZ_TRANSPORT_VER}::core
+    gz-transport::core
     gz-msgs${GZ_MSGS_VER}
     gz-common${GZ_COMMON_VER}::gz-common${GZ_COMMON_VER}
     )
