Added pre-commit action to the workflow.
Signed-off-by: Leander Stephen D'Souza <leanderdsouza1234@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,20 @@ on:
       - 'main'
 
 jobs:
+
+  pre-commit:
+    name: Pre-commit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+
+      - name: Run pre-commit
+        uses: pre-commit/action@v3.0.1
+
   jammy-ci:
     runs-on: ubuntu-latest
     name: Ubuntu Jammy CI
