--- a/examples/standalone/point_cloud/CMakeLists.txt
+++ b/examples/standalone/point_cloud/CMakeLists.txt
@@ -5,16 +5,14 @@ project(gz-gui-point-cloud-example)
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   find_package(gz-transport QUIET REQUIRED OPTIONAL_COMPONENTS log)
 
-  find_package(gz-common6 REQUIRED)
-  set(GZ_COMMON_VER ${gz-common6_VERSION_MAJOR})
+  find_package(gz-common REQUIRED)
 
-  find_package(gz-msgs11 REQUIRED)
-  set(GZ_MSGS_VER ${gz-msgs11_VERSION_MAJOR})
+  find_package(gz-msgs REQUIRED)
 
   add_executable(point_cloud point_cloud.cc)
   target_link_libraries(point_cloud
     gz-transport::core
-    gz-msgs${GZ_MSGS_VER}
-    gz-common${GZ_COMMON_VER}::gz-common${GZ_COMMON_VER}
+    gz-msgs
+    gz-common::gz-common
     )
 endif()
