--- a/examples/standalone/scene_provider/CMakeLists.txt
+++ b/examples/standalone/scene_provider/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
 
 project(gz-gui-scene-provider)
 
-find_package(gz-msgs11 REQUIRED)
+find_package(gz-msgs REQUIRED)
 find_package(gz-transport REQUIRED)
 
 add_executable(scene_provider
   scene_provider.cc
 )
 target_link_libraries(scene_provider
-  gz-msgs11::core
+  gz-msgs::core
   gz-transport::core
 )
