--- a/test/plugins/CMakeLists.txt
+++ b/test/plugins/CMakeLists.txt
@@ -24,6 +24,6 @@ foreach (src ${plugins})
     PUBLIC
     ${PROJECT_LIBRARY_TARGET_NAME}
     PRIVATE
-    gz-plugin${GZ_PLUGIN_VER}::register
+    gz-plugin::register
   )
 endforeach (src ${qt_headers_local})
