--- a/package.xml
+++ b/package.xml
@@ -12,14 +12,14 @@
 
   <build_depend>gz-cmake3</build_depend>
 
-  <depend>gz-common6</depend>
-  <depend>gz-math8</depend>
-  <depend>gz-msgs11</depend>
-  <depend>gz-plugin3</depend>
-  <depend>gz-rendering9</depend>
+  <depend>gz-common</depend>
+  <depend>gz-math</depend>
+  <depend>gz-msgs</depend>
+  <depend>gz-plugin</depend>
+  <depend>gz-rendering</depend>
   <depend>gz-tools2</depend>
   <depend>gz-transport</depend>
-  <depend>gz-utils3</depend>
+  <depend>gz-utils</depend>
   <depend>libqt5-core</depend>
   <depend>libqt5-qml</depend>
   <depend>libqt5-quick</depend>
