--- a/src/plugins/camera_fps/CMakeLists.txt
+++ b/src/plugins/camera_fps/CMakeLists.txt
@@ -4,6 +4,6 @@ gz_gui_add_plugin(CameraFps
   QT_HEADERS
     CameraFps.hh
   PUBLIC_LINK_LIBS
-   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
+   gz-rendering::gz-rendering
 )
 
