--- a/src/plugins/grid_config/CMakeLists.txt
+++ b/src/plugins/grid_config/CMakeLists.txt
@@ -4,7 +4,7 @@ gz_gui_add_plugin(GridConfig
   QT_HEADERS
     GridConfig.hh
   PUBLIC_LINK_LIBS
-    gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
+    gz-rendering::gz-rendering
 )
 
 # Also install as Grid3D, which was a legacy plugin with a subset of features
