--- a/src/plugins/interactive_view_control/CMakeLists.txt
+++ b/src/plugins/interactive_view_control/CMakeLists.txt
@@ -6,5 +6,5 @@ gz_gui_add_plugin(InteractiveViewControl
   TEST_SOURCES
     # ViewControl_TEST.cc
   PUBLIC_LINK_LIBS
-   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
+   gz-rendering::gz-rendering
 )
