--- a/src/plugins/tape_measure/CMakeLists.txt
+++ b/src/plugins/tape_measure/CMakeLists.txt
@@ -2,5 +2,5 @@ gz_gui_add_plugin(TapeMeasure
   SOURCES TapeMeasure.cc
   QT_HEADERS TapeMeasure.hh
   PRIVATE_LINK_LIBS
-    gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
+    gz-rendering::gz-rendering
 )
