package.xml: update qt5 dependencies to qt6
Signed-off-by: Steve Peters <scpeters@openrobotics.org>

--- a/package.xml
+++ b/package.xml
@@ -20,29 +20,29 @@
   <depend>gz-tools2</depend>
   <depend>gz-transport</depend>
   <depend>gz-utils</depend>
-  <depend>libqt5-core</depend>
-  <depend>libqt5-qml</depend>
-  <depend>libqt5-quick</depend>
-  <depend>libqt5-widgets</depend>
+  <depend>libqt6svg6</depend>
   <depend>protobuf-dev</depend>
-  <depend>qml-module-qt-labs-folderlistmodel</depend>
-  <depend>qml-module-qt-labs-platform</depend>
-  <depend>qml-module-qt-labs-settings</depend>
-  <depend>qml-module-qtcharts</depend>
-  <depend>qml-module-qtgraphicaleffects</depend>
-  <depend>qml-module-qtlocation</depend>
-  <depend>qml-module-qtpositioning</depend>
-  <depend>qml-module-qtquick-controls2</depend>
-  <depend>qml-module-qtquick-controls</depend>
-  <depend>qml-module-qtquick-dialogs</depend>
-  <depend>qml-module-qtquick-extras</depend>
-  <depend>qml-module-qtquick-layouts</depend>
-  <depend>qml-module-qtquick-templates2</depend>
-  <depend>qml-module-qtquick-window2</depend>
-  <depend>qml-module-qtquick2</depend>
-  <depend>qtbase5-dev</depend>
-  <depend>qtdeclarative5-dev</depend>
-  <depend>qtquickcontrols2-5-dev</depend>
+  <depend>qml6-module-qt-labs-folderlistmodel</depend>
+  <depend>qml6-module-qt-labs-platform</depend>
+  <depend>qml6-module-qt-labs-settings</depend>
+  <depend>qml6-module-qtcharts</depend>
+  <depend>qml6-module-qtpositioning</depend>
+  <depend>qml6-module-qtqml-models</depend>
+  <depend>qml6-module-qtquick-controls</depend>
+  <depend>qml6-module-qtquick-dialogs</depend>
+  <depend>qml6-module-qtquick-layouts</depend>
+  <depend>qml6-module-qtquick-templates</depend>
+  <depend>qml6-module-qtquick-window</depend>
+  <depend>qml6-module-qtquick</depend>
+  <depend>qml6-module-qtqml</depend>
+  <depend>qml6-module-qtcore</depend>
+  <depend>qml6-module-qtqml-workerscript</depend>
+  <depend>qml6-module-qt5compat-graphicaleffects</depend>
+  <depend>qt6-5compat-dev</depend>
+  <depend>qt6-base-dev</depend>
+  <depend>qt6-base-private-dev</depend>
+  <depend>qt6-declarative-dev</depend>
+  <depend>qt6-declarative-private-dev</depend>
   <depend>tinyxml2</depend>
 
   <test_depend>xvfb</test_depend>
