Update dependency on gz-cmake3 to gz-cmake
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
 
   <buildtool_depend>cmake</buildtool_depend>
 
-  <build_depend>gz-cmake3</build_depend>
+  <build_depend>gz-cmake</build_depend>
 
   <depend>gz-common</depend>
   <depend>gz-math</depend>
